# pico-loan

./: README.md  model.db  pyproject.toml  test3.session.sql
src/: __main__.py  db.py  fun.py
